# media-player-oxide

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
libav-player/: Cargo.toml  README.md
libav-player-demo/: Cargo.toml
libav-player-demo/src/: main.rs
libav-player/src/: accelerator.rs  codec.rs  error.rs  filter.rs  input.rs  lib.rs  player.rs  stream.rs
libav-player/src/codec/: audio.rs  mod.rs  subtitle.rs  video.rs
libav-player/tests/: e2e_player.rs  subtitles.rs
media/: subtitle-text.srt
wgpu-player/: Cargo.toml
wgpu-player-demo/: Cargo.toml
wgpu-player-toolkit/: Cargo.toml  README.md
wgpu-player-toolkit/src/: lib.rs
wgpu-player/src/: accelerator.rs  codec.rs  error.rs  filter.rs  input.rs  lib.rs  media.rs  player.rs  stream.rs
