[package]
name = "libav-player"
version = "0.1.0"
edition = "2024"

[dependencies]
thiserror = "2"
tracing = "0.1.41"
url = "2.5"

rusty_ffmpeg = { version = "0.16.3+ffmpeg.7.1", features = ["ffmpeg7"] }

[dev-dependencies]
anyhow = "1"
rstest = "0.26"
tracing-subscriber = "0.3.19"

[features]
# Dynamically link to the system ffmpeg headers and shared libraries.
link-system-ffmpeg = ["rusty_ffmpeg/link_system_ffmpeg"]
# Dynamically link to vcpkg ffmpeg headers and shared libraries.
link-vcpkg-ffmpeg = ["rusty_ffmpeg/link_vcpkg_ffmpeg"]
# Enable debugging tracing on the hot loop of the player
# DO NOT ENABLE THIS OUTSIDE OF DEBUGGING.
trace-hotpath = []

[[example]]
name = "basic_player"